<resources>
    <string name="app_name">Thomas Comer CS 360 Project</string>
    <string name="register">Register Account</string>
    <string name="choose_username">Choose Username</string>
    <string name="choose_password">Choose Password</string>
    <string name="re_enter_password">Re-enter Identical Password</string>
    <string name="register_btn">Register</string>
    <string name="existing_user">Login to Existing Account</string>
    <string name="logo">Logo</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="event_tracker">Event Tracker App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="request_permissions">Request SMS Permissions</string>
    <string name="_id">1</string>
    <string name="row_title">Title</string>
    <string name="row_description_of_event">Description of event</string>
    <string name="row_date">November 30 2025</string>
    <string name="row_time">12:00 AM</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="add">Add</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="create">Create</string>
    <string name="sms_notifications">SMS Notifications</string>
    <string name="add_events">Add Events</string>
    <string name="calendar">Calendar</string>
    <string name="update_events">Update Events</string>
    <string name="event_list">Event List</string>
    <string name="add_event">Add Event</string>
    <string name="update">Update</string>
    <string name="phone_number">Phone Number</string>
    <string name="do_not_delete_when_event_occurs">Do not delete when event occurs.</string>
</resources>