<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity"
    android:background="@color/white" >

    <TextView
        android:id="@+id/sign_in_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"

        android:text="@string/event_tracker"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_flag"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_style_rounded"
        android:backgroundTint="@color/gray"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/password_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_one"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_style_rounded"
        android:backgroundTint="@color/gray"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/sign_in_button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_one"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/teal_200"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_button_one"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/request_button"
        android:layout_width="100dp"
        android:layout_height="29dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/request_permissions"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="SmallSp" />

</RelativeLayout>