<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddActivity">

    <include
        android:id="@+id/header"
        layout="@layout/simple_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp">

            <EditText
                android:id="@+id/title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_style_rounded"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:background="@drawable/shape_style_rounded"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/title_input" />

            <LinearLayout
                android:id="@+id/date_and_time_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/description_input">

                <Button
                    android:id="@+id/btnDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0.5"
                    android:text="@string/date" />

                <Button
                    android:id="@+id/btnTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.5"
                    android:text="@string/time" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/checkbox_persistent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Do not delete when finished"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_and_time_buttons" />

            <Button
                android:id="@+id/add_new"
                android:layout_width="105dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/teal_200"
                android:enabled="false"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_persistent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>